Fixed scrollbar

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -7,7 +7,7 @@
 }
 
 ::-webkit-scrollbar {
-    height: 20px;
+    height: 10px;
     width: 10px;
     background: #1A1A1A;
 }
